modifictions for odata site

--- a/src/index.html
+++ b/src/index.html
@@ -129,12 +129,14 @@
         <div id="menuContainer">
             <!--Ontology Menu-->
             <ul id="m_select" class="toolTipMenu noselect">
-                <li><a href="#foaf" id="foaf">Friend of a Friend (FOAF) vocabulary</a></li>
+                <li><a href="#tripservice" id="tripservice">Trip service</a></li>
+                <li><a href="#msgraph10" id="msgraph10">MS Graph</a></li>
+                <!-- <li><a href="#foaf" id="foaf">Friend of a Friend (FOAF) vocabulary</a></li>
                 <li><a href="#goodrelations" id="goodrelations">GoodRelations Vocabulary for E-Commerce</a></li>
                 <li><a href="#muto" id="muto">Modular and Unified Tagging Ontology (MUTO)</a></li>
                 <li><a href="#ontovibe" id="ontovibe">Ontology Visualization Benchmark (OntoViBe)</a></li>
                 <li><a href="#personasonto" id="personasonto">Personas Ontology (PersonasOnto)</a></li>
-                <li><a href="#sioc" id="sioc">SIOC (Semantically-Interlinked Online Communities) Core Ontology</a></li>
+                <li><a href="#sioc" id="sioc">SIOC (Semantically-Interlinked Online Communities) Core Ontology</a></li> -->
 
                 <!-- build:remove release-->
                 <li><a href="#benchmark" id="benchmark">Benchmark Graph for VOWL</a></li>
