--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,8 @@
             <!--Ontology Menu-->
             <ul id="m_select" class="toolTipMenu noselect">
                 <li><a href="#tripservice" id="tripservice">Trip service</a></li>
-                <li><a href="#msgraph10" id="msgraph10">MS Graph</a></li>
+                <li><a href="#msgraphv10" id="msgraphv10">MS Graph</a></li>
+                <li><a href="#northwind" id="northwind">MS Graph</a></li>
                 <!-- <li><a href="#foaf" id="foaf">Friend of a Friend (FOAF) vocabulary</a></li>
                 <li><a href="#goodrelations" id="goodrelations">GoodRelations Vocabulary for E-Commerce</a></li>
                 <li><a href="#muto" id="muto">Modular and Unified Tagging Ontology (MUTO)</a></li>
